# ldap-sql-adapter

./: .air.toml  .gitignore  Dockerfile  README.md  Taskfile.yaml  go.mod  go.sum  mprocs.yaml
.github/workflows/: docker-publish.yml
authelia/: configuration.yml
cmd/api-forward-auth/: main.go
cmd/ldap-sql-adapter/: main.go
internal/config/: config.go
internal/cookie/: cookie.go
internal/ldapserver/: ldapserver.go
internal/logger/: log.go
internal/provider/: api.go  provider.go  providers.go  sql.go
internal/server/: helpers.go  prometheus.go  server.go
internal/server/html/: layout.html  logged-in.html  login.html  message.html  reset-password-initiate.html  reset-password.html
test/: .gitignore  ldap-test.ipynb  pyproject.toml
test/authelia/: configuration.yml
test/traefik/: traefik-dynamic.yaml  traefik-static.yaml
